# tindalwic

./: .editorconfig  .gitignore  ABOUT.md  Cargo.toml  GENESIS.md  GNUmakefile  LICENSE-MIT  MANIFESTO.md  ORIGINS.md  README.md  alacs.abnf  index.html  justfile  rustfmt.toml  tindalwic.abnf  tindalwic_webapp.js  tindalwic_webapp_bg.wasm
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
macros/: Cargo.toml
macros/src/: json.rs  lib.rs  path.rs  serde.rs  walk.rs
main/: Cargo.toml  build.rs
main/benches/: rand.rs
main/src/: alloc.rs  bumpalo.rs  capped.rs  fmt.rs  internals.rs  lib.rs  parse.rs  tree.rs  walk.rs
main/src/serde/: compact.rs  mod.rs  neutered.rs  verbose.rs
main/tests/: trybuild.rs  unit.rs
main/tests/macro_err/: starts_punct.stderr
main/tests/serde_model/: mod.rs
main/tests/trybuild/: lifetime.rs  lifetime.stderr  starts_punct.stderr
python/: alacs.py  pyproject.toml
python/alacs/: __init__.py  yaml.py
python/alacs_test/: __init__.py  __main__.py  equals.py  generate.py  unit_tests.py
python/tindalwic/: __init__.py  pointer.py  yaml.py
python/tindalwic_test/: __init__.py  __main__.py  equals.py  generate.py  ruamel.py  unit_tests.py
rust/: Cargo.toml  generate.py
rust/benches/: rand.rs
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/src/: alloc.rs  comments.rs  encoded.rs  fmt.rs  internals.rs  lib.rs  maps.rs  parse.rs  paths.rs  rand.rs  serde.rs  tests.rs  values.rs
rust/src/serde/: compact.rs  mod.rs  neutered.rs  verbose.rs
rust/tests/: unit.rs
rust/tests/macro_err/: starts_punct.rs  starts_punct.stderr
rust/webapp/: Cargo.toml  index.html
rust/webapp/src/: lib.rs
serde/: Cargo.toml
serde/benches/: rand.rs
serde/src/: compact.rs  de.rs  lib.rs  neutered.rs  ser.rs  verbose.rs
serde/tests/: serde.rs
webapp/: Cargo.toml  index.html
webapp/src/: lib.rs
