[workspace]
members = ["macros", "main", "webapp"]
default-members = ["macros", "main"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Comments Are Important <comments.are.important@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/comments-are-important/tindalwic"

[workspace.dependencies]
syn = "2.0.117"
assert-json-diff = "2.0.2"
bumpalo = "3.20.2"
console_error_panic_hook = "0.1.7"
criterion = "0.8.2"
js-sys = "0.3.98"
markdown = "1.0.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.149"
toml_edit = "0.25.11"
trybuild = "1.0.116"
wasm-bindgen = "0.2.121"
web-sys = "0.3.98"
yaml_serde = "0.10.4"

[workspace.lints.rust]
missing_docs = "deny"
unused = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
