[package]
name = "tindalwic"
description = "tindalwic data format and tools"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
alloc = []
bumpalo = ["alloc", "dep:bumpalo"]

[dependencies]
bumpalo = { workspace = true, optional = true }
tindalwic-macros = { path = "../macros" }

[dev-dependencies]
markdown = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
