[workspace]
members = ["macros"]

[package]
name = "tindalwic"
version = "0.1.0"
edition = "2024"
description = "tindalwic data format and tools"
license = "MIT OR Apache-2.0"
authors = ["Comments Are Important <comments.are.important@gmail.com>"]

[features]
alloc = []

[dependencies]
tindalwic-macros = { path = "./macros" }

[dev-dependencies]
markdown = "1.0.0"
regex = "1.12.3"
trybuild = "1.0.116"

[package.metadata.docs.rs]
all-features = true

[workspace.lints.rust]
unused = "deny"
missing_docs = "warn"

[lints]
workspace = true
