[workspace]
members = ["macros"]

[package]
name = "tindalwic"
version = "0.1.0"
edition = "2024"
description = "tindalwic data format and tools"
license = "MIT OR Apache-2.0"
authors = ["Comments Are Important <comments.are.important@gmail.com>"]

[features]
alloc = ["dep:bumpalo"]

[dependencies]
bumpalo = { version = "3.20.2", optional = true }
tindalwic-macros = { path = "./macros" }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
markdown = "1.0.0"
rand = "0.10.1"
trybuild = "1.0.116"

[package.metadata.docs.rs]
all-features = true

[workspace.lints.rust]
missing_docs = "deny"
unused = "deny"

[lints]
workspace = true

[[bench]]
name = "rand"
harness = false
