[workspace]
members = [".", "macros", "webapp"]
default-members = [".", "macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Comments Are Important <comments.are.important@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/comments-are-important/tindalwic"

[workspace.dependencies]
syn = "2.0.117"
assert-json-diff = "2.0.2"
bumpalo = "3.20.2"
console_error_panic_hook = "0.1.7"
criterion = "0.8.2"
js-sys = "0.3.98"
markdown = "1.0.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.149"
toml = "1.1.2"
trybuild = "1.0.116"
wasm-bindgen = "0.2.121"
web-sys = "0.3.98"
yaml_serde = "0.10.4"


[package]
name = "tindalwic"
description = "tindalwic data format and tools"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
alloc = ["dep:bumpalo"]
serde = ["alloc", "dep:serde"]

[dependencies]
bumpalo = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
tindalwic-macros = { path = "./macros" }

[dev-dependencies]
assert-json-diff = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
markdown = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
trybuild = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[workspace.lints.rust]
missing_docs = "deny"
unused = "deny"

[lints]
workspace = true

[[bench]]
name = "rand"
required-features = ["serde"]
harness = false
