[package]
name = "tindalwic-webapp"
description = "a simple tindalwic browser app"
version = { workspace = true }
edition = { workspace = true }
rust-version = "1.87"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
bumpalo = { workspace = true }
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
tindalwic = { path = "../main", features = ["bumpalo"] }
tindalwic-serde = { path = "../serde" }
toml_edit = { workspace = true, features = ["serde"] }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
yaml_serde = { workspace = true }

[lints.rust]
# workspace settings are not right for this member
unused = "deny"
