[package]
name = "tindalwic-macros"
description = "macros for the tindalwic package"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "tindalwic_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }

[lints]
workspace = true
