[package]
name = "tindalwic-webapp"
description = "a simple tindalwic browser app"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bumpalo = "3.20.2"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.98"
serde_json = { version = "1.0.149", features = ["alloc"] }
tindalwic = { path = "..", features = ["serde"] }
toml = "1.1.2"
wasm-bindgen = "0.2.121"
web-sys = { version = "0.3.98", features = ["console"] }
yaml_serde = "0.10.4"
