[package]
name = "tindalwic-webapp"
description = "a simple tindalwic browser app"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
bumpalo = { workspace = true }
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
tindalwic = { path = "..", features = ["serde"] }
toml = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
yaml_serde = { workspace = true }
